# meeseeks-nuntius

./: .env.example  .gitignore  Cargo.toml  DOCKER_SETUP.md  DOCKER_SETUP_ZH.md  Dioxus.toml  README.md  README_ZH.md  api.Dockerfile  clippy.toml  docker-compose.dev.yml  docker-compose.yml
.github/: CODE-OF-CONDUCT.MD  CODEOWNERS  SECURITY.md
.github/workflows/: audit.yml  check.yml  format.yml  lint.yml  test.yml
api/: Cargo.toml  file.out
api/src/: lib.rs  local.rs  pgp_mgr.rs  test_pgp.rs  user_data.rs
api/src/crypto/: generate.rs  message.rs  mod.rs  test_generate.rs  test_message.rs
api/src/entities/: message_token.rs  mod.rs  relay_key.rs  relay_message.rs
api/src/migration/: m20250124_000001_create_initial_tables.rs  mod.rs
api/src/persistence/: database.rs  mod.rs  models.rs  postgres.rs  test_database.rs
api/src/pgp_mgr/: generate.rs  mod.rs  test_generate.rs
db/init/: 00-init.sql
desktop/: Cargo.toml
desktop/assets/: contacts_manager.css  desktop_navigation.css  messages.css  party_dash.css  room_dash.css  shared.css  shared_header.css  variables.css
desktop/src/: main.rs
desktop/src/components/: desktop_layout.rs  desktop_navigation.rs  mod.rs  shared_header.rs
desktop/src/views/: contacts_manager.rs  desktop_user_profile_edit.rs  messages.rs  mod.rs  party_dash.rs  room_dash.rs
locales/: ar.yml  de.yml  en.yml  es.yml  fr.yml  ja.yml  zh-TW.yml  zh.yml
mobile/: Cargo.toml
mobile/assets/: main.css  mobile_header.css  mobile_header_android.css  mobile_header_ios.css  mobile_layout.css  mobile_messages.css  mobile_messages_android.css  mobile_messages_ios.css  mobile_navigation.css  mobile_room_dash.css  variables.css
mobile/src/: main.rs
mobile/src/components/: messages_side_panel.rs  mobile_header.rs  mobile_layout.rs  mobile_navigation.rs  mod.rs
mobile/src/views/: mobile_messages.rs  mod.rs  room_dash.rs
shared/: Cargo.toml
shared/src/: lib.rs  local.rs  user_data.rs
shared/src/crypto/: message.rs  mod.rs  test_message.rs
shared/src/persistence/: mod.rs  test_database.rs
ui/: Cargo.toml
ui/assets/styling/: i18n.css  user_profile_edit.css  user_profile_mini.css
ui/src/: css_utils.rs  echo.rs  i18n_context.rs  icon.rs  lib.rs  test_i18n_context.rs  test_icon.rs  test_utils.rs  user_profile_edit.rs  user_profile_mini.rs
ui/src/types/: mod.rs  room.rs
web/: Cargo.toml
web/src/: main.rs
