[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api",
]

[workspace.dependencies]
dioxus = { version = "0.6.3" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1.46.1", features = ["full"] }
pgp = { version = "0.16.0" }
chrono = { version = "0.4.41" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
hex = { version = "0.4.3" }
zeroize = { version = "1.8.1" }
rand = { version = "0.8.5" }

# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
