[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api",
]

[workspace.dependencies]
dioxus = { version = "0.6.3" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
serde_yml = { version = "0.0.12" }
base64 = { version = "1.48.0" }
hex = { version = "0.4.3" }
aes-gcm = { version = "0.10.3" }
crypto_box = { version = "0.9.1" }
rand = { version = "0.8.5" }
sled = { version = "0.34.7" }
rust-i18n = { version = "3.1.5" }
tokio = { version = "1.46.1", features = ["full"] }

# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
