[workspace]
resolver = "2"
members = [
    "ui",
    "desktop",
    "mobile",
    "web",
    "api",
    "shared",
]

[workspace.dependencies]
dioxus = { version = "0.7.0-rc.0" }
dioxus-server = { version = "0.7.0-rc.0" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.143" }
serde_yml = { version = "0.0.12" }
base64 = { version = "1.48.0" }
hex = { version = "0.4.3" }
aes-gcm = { version = "0.10.3" }
crypto_box = { version = "0.9.1" }
rand = { version = "0.9.2" }
sled = { version = "0.34.7" }
tokio = { version = "1.46.1", features = ["full"] }
dioxus-logger = { version = "0.7.0-rc.0" }
axum = { version = "0.8.4" }
dotenvy = { version = "0.15.7" }
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-time", "with-uuid", "macros"] }
sea-orm-migration = { version = "1.1.14" }

# workspace
ui = { path = "ui" }
web = { path = "web" }
api = { path = "api" }
shared = { path = "shared" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
