[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
# Optional
crypto_box = { workspace = true, features = ["chacha20"] }
rand = { workspace = true, optional = true }
sled = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
serial_test = { version = "3.2.0" }
tempfile = { version = "3.0" }

[features]
default = ["dep:sled", "dep:tokio", "dep:rand"]
server = ["dioxus/server", "dep:sled", "dep:tokio", "dep:rand"]
test = ["dioxus/server", "dep:sled", "dep:tokio", "dep:rand"]
