[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
shared = { workspace = true }
serde = { workspace = true }
dioxus-logger = { workspace = true }

[dev-dependencies]
serial_test = { version = "3.2.0" }
tempfile = { version = "3.24" }
# Platform-specific dependencies - only for non-WASM targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

[features]
default = []
server = ["dioxus/server"]