[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
api = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }

[features]
default = []
desktop = ["dioxus/desktop"]
bundle = []
