[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true, features = ["mobile"] }
shared = { workspace = true, features = ["mobile"] }
api = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["mobile"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
