[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
shared = { workspace = true }
serde_yml = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
dioxus-ssr = "0.7.3"
pretty_assertions = "1.4.1"

[features]
default = []
mobile = []
desktop = []
