[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
dioxus-logger = { workspace = true }
api = { workspace = true }

# Platform-specific dependencies - only for non-WASM targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }

[features]
default = ["web"]
server = ["dioxus/server"]
web = ["dioxus/web"]